# OFS

./: .gitignore  CMakeLists.txt  README.md  ofs-installer.iss
OFS-lib/: CMakeLists.txt  OFS_MpvLoader.cpp  OFS_Serialization.h  OFS_StringsGenerated.cpp  OFS_StringsGenerated.h  OFS_Util.cpp  OFS_Util.h
OFS-lib/Funscript/: Funscript.cpp  Funscript.h  FunscriptAction.h  FunscriptHeatmap.cpp  FunscriptHeatmap.h  SpeedColors.md
OFS-lib/UI/: OFS_KeybindingSystem.cpp  OFS_ScriptTimeline.cpp  OFS_ScriptTimeline.h  OFS_VideoplayerControls.cpp  OFS_VideoplayerControls.h  ScriptPositionsOverlayMode.cpp  ScriptPositionsOverlayMode.h
OFS-lib/localization/: OFS_Localization.h
build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  scripter.sln
build_test/OFS-lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  OFS_lib.sln  OFS_lib.vcxproj  OFS_lib.vcxproj.filters  cmake_install.cmake
build_test/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  civetweb.vcxproj  civetweb.vcxproj.filters  cmake_install.cmake  glad2.vcxproj  glad2.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters  imgui_stdlib.vcxproj  (+7 more)
data/: bluetooth-connector.html
lib/: CMakeLists.txt
localization/: localization.csv
plans/: device-integration-plan.md  device-section-plan.md  implementation_plan.md  pattern_picker_plan.md  voice_input_fix_plan.md
src/: CMakeLists.txt  OFS_Project.cpp  OpenFunscripter.cpp  OpenFunscripter.h
(+151 files in other folders)
